WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114941
Scrollbar should not depend on EventHandler, Frame and FrameView
https://bugs.webkit.org/show_bug.cgi?id=114941
Summary
Scrollbar should not depend on EventHandler, Frame and FrameView
Carlos Garcia Campos
Reported
2013-04-22 02:08:24 PDT
It's a layering violation.
Attachments
Patch
(2.53 KB, patch)
2013-04-22 02:13 PDT
,
Carlos Garcia Campos
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-04-22 02:13:53 PDT
Created
attachment 199006
[details]
Patch
Darin Adler
Comment 2
2013-04-22 08:43:04 PDT
Comment on
attachment 199006
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=199006&action=review
> Source/WebCore/ChangeLog:14 > + It's a layering violation that Scrollbar uses EventHandler, Frame > + and FrameView. Frame is used to get the EvenHandler that is used > + to set mousePressed to false after a Scrollbar::mouseUp(). This is > + not really needed, since EvenHandler already sets m_mousePressed > + to false when calling Scrollbar::mouseUp(). The PopupMenu windows > + implementation also calls Scrollbar::mouseUp(), but that scrollbar > + is not inside a FrameView.
Some EvenHandler typos here.
Carlos Garcia Campos
Comment 3
2013-04-22 08:50:32 PDT
(In reply to
comment #2
)
> (From update of
attachment 199006
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=199006&action=review
> > > Source/WebCore/ChangeLog:14 > > + It's a layering violation that Scrollbar uses EventHandler, Frame > > + and FrameView. Frame is used to get the EvenHandler that is used > > + to set mousePressed to false after a Scrollbar::mouseUp(). This is > > + not really needed, since EvenHandler already sets m_mousePressed > > + to false when calling Scrollbar::mouseUp(). The PopupMenu windows > > + implementation also calls Scrollbar::mouseUp(), but that scrollbar > > + is not inside a FrameView. > > Some EvenHandler typos here.
Ooops, will fix them before landing, thanks for the review.
Carlos Garcia Campos
Comment 4
2013-04-22 10:01:28 PDT
Committed
r148892
: <
http://trac.webkit.org/changeset/148892
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug